--- a/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
+++ b/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
@@ -7273,3 +7273,7 @@ map {
 .basic-page-custom-summary-italics {
     font-style: italic !important;
 }
+.basic-page-custom-summary-bold {
+    font-style: normal;
+    font-weight: bold !important;
+}
